# kfai-pipeline

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  README.md  cleaning_validation_results.json  failures_to_transcribe.json  kfdb.sqlite  mypy.ini  pyproject.toml  requirements.txt  skipped_videos.json  update-cmetadata.sql
.github/workflows/: ci.yml
assets/: style.css
src/: __init__.py  build_and_query.py  build_vector_store.py  clean.py  clean_locally.py  cleaning_validation.py  config.py  db.py  fetch_raw_data.py  ingest_vectorstore.py  load_data.py  load_to_postgres.py  main.py  parse_query.py  process_failed_videos.py  query_agent.py  transcript.py  utils.py  video.py
src/_deprecated/: build_and_query.py  clean.py  cleaning_validation.py  ingest_vectorstore.py  load_to_postgres.py
src/common/: paths.py  types.py
src/extract/: fetch_raw_data.py  process_failed_videos.py
src/extract/utils/: config.py  helpers.py
src/kfai/: cli.py
src/kfai/core/: paths.py  types.py
src/kfai/extractors/: fetch_raw_data.py  process_failed_videos.py  transcribe_failures.py
src/kfai/loaders/: build_vector_store.py  gradio_app.py  interactive_qa.py
src/kfai/transformers/: clean_locally.py
src/kfai_helpers/: config.py  db.py  parse_query.py  transcript.py  types.py  utils.py  video.py
src/load/: build_vector_store.py  interactive_qa.py  parse_query.py  query_agent.py
src/load/agents/: __init__.py  query_agent.py
src/load/utils/: config.py  filtering.py  helpers.py  parsing.py  prompts.py  types.py
src/tests/: conftest.py  test_transformer.py
src/transform/: clean_locally.py
src/transform/utils/: cleaning.py  config.py  helpers.py  logger_config.py
src/vector_store/: build_vector_store.py
stubs/isodate/: __init__.pyi  duration.pyi
stubs/whisper/: __init__.pyi  transribe.pyi
stubs/yt_dlp/: __init__.pyi  utils.pyi
tests/: conftest.py  test_extractor.py  test_loader.py  test_transformer.py
tests/extractors/: test_fetch_raw_data.py  test_process_failed_videos.py  test_transcribe_failures.py
tests/loaders/: test_build_vector_store.py  test_gradio_app.py  test_interactive_qa.py
tests/loaders/agents/: test_query_agent.py
tests/loaders/utils/: test_filtering.py  test_parsing.py
tests/transformers/: test_clean_locally.py
tests/transformers/utils/: test_cleaning.py  test_helpers.py  test_logger_config.py
videos/2012/06/: tDMCeUpR8Es.json
videos/2012/08/: Bio45-BIuMA.json
videos/2012/09/: 8iVBzsZ2VkA.json  keUiCjTLlp0.json  n0_0J6m3QOE.json
videos/2012/10/: -GqpjWVN-N4.json  1tb-x2Zovmo.json  fk3PEDZai7o.json  htmaITrVD38.json  sLs7Za_Rlck.json
videos/2012/11/: 3ON39Owp6Xw.json  82Ep0f0GPgs.json  8pM_CXBNGbw.json  GC9SOisCF_w.json  NEGD-nfBpec.json  SdoT55eepbU.json  hUNfIoxrgdg.json  yB9FRLRU8hg.json  zIzNHoeNKbs.json  zflx9SHCucs.json
videos/2012/12/: MVIlmrbWLZI.json  if0EcXb1KkE.json  wnMHc21296o.json
videos/2013/01/: DNgm3QDSClI.json  EKLTPb6Jg-A.json
videos/2013/02/: -av_a2XdHo8.json  LwrcFO8VRvE.json  MZpeY4uMJHA.json  VPNUia9gSGE.json  WZqI0fUK33s.json  aO6zw2LeJ3c.json  fFqSoc2y29g.json  hFdlkLLPNN8.json  v4L6j2Brtxk.json
videos/2013/03/: SrSrLTORqkA.json
videos/2013/05/: MI5VJjMMcNs.json  OcDKpqhqUEE.json  Og5AgWF8U70.json  bT9sWtAYzA8.json
videos/2013/06/: Wvk-I3o3CBk.json
videos/2013/07/: Ch_Gj7oulug.json  D1m_FV8VJ6g.json  EFIyDLIaS9Q.json  GnGi_XZYK3U.json  IGpJLYnPjLk.json  YJGOr9AAkqQ.json  bqYRcvfJzSM.json  lJRXSpssxVI.json
videos/2013/08/: 0mUycIw44wg.json  2vTE0qG5RVI.json  6eOLsF_GnC0.json  7SkvqkHCp74.json  9oQlaHMcnCk.json  Ab_0wX8YmEQ.json  C4irpBDriwE.json  La9ramWCvTs.json  _yKPqSJpv1Y.json  cpWGPLwOqUE.json  laa50X3zOFY.json  nPCnMLgN9tY.json  nt60wPQnd88.json  oMSOGq7eXos.json  uahLkeUcCEw.json
videos/2013/09/: 3DbTvEaepus.json  AQ4PDZQxOeg.json  FeShNtWaNa4.json  JIa94Jd_SLs.json  Lwfm1n2bgu0.json  bNsdlH4_1Bw.json  czQlZbIgTnI.json  h4sdL3L-FnE.json  nWCWYBugj4Y.json  thI5hu8QPlA.json  y_emly9xkgA.json
videos/2013/10/: 7jVelpwj6q4.json  Mf9KUquPXnE.json  Oj84yfunJww.json  ftNghThQH7g.json  l-jlSG-1c6s.json  mSUrx8iYKuc.json  rk146zC5myU.json
videos/2013/11/: 00Wy079_oQs.json  5R1ywuQyHKI.json  9sOZ7xtQStg.json  Qz-bybD9IOU.json  UlvUMo1RLiY.json
videos/2013/12/: 5YjihKcmSlM.json  Jfa53xwVMIU.json  LHyQJZeFs1w.json  O5iCxw1Zsfk.json  PF3kfESCWYM.json  PIBl23LhlVE.json  TB32tGVNn7U.json  XVAnEtQtvds.json  YWbcs2HBkrM.json  acUZeFsZGn8.json  j3QF4clbAqc.json  m4HtpgrkKOc.json  mGlc045J8vo.json  spA3OhI_8H0.json  tBjVed-bjt0.json
videos/2014/01/: -25Qn1_MtPM.json  29EtfJ1i_FQ.json  69pmUwUfPKE.json  6UFAZXfU15c.json  8I8ixA4Cwq0.json  9J0sReGlNCY.json  BaWEVSvhbfY.json  KqSubZxXzjY.json  LALu_kkI3TA.json  QDCN5V6Revc.json  Uktz0bscV94.json  VCjVi--NC5A.json  bfyi6BQWIsg.json  j7um7UETdoU.json
videos/2014/02/: 038bkEQP_2s.json  2NZAGAVnRQo.json  2Vw8MHzUDns.json  80tkmULdL6E.json  CJ8f5Wa0DLo.json  ERDqKW-fyTo.json  HT-GBO0CVQk.json  TSzIBEnBvMo.json  cOcYOMDYpCE.json  f1GGOTgVjYg.json  vLQpM5nYtmM.json
videos/2014/03/: -qgjOJXh9qM.json  G043-nje06A.json  JL93Ddgy0XA.json  N9loX40KoOg.json  S3qWKKprbj0.json  hcBlmZR851s.json  nb2jXZa-t7s.json  rwlhF3dsA1M.json
videos/2014/04/: 4acIy0Yemuk.json  (+15 more)
(+16055 files in other folders)
