[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kfai"
version = "0.9.1"
description = "An ETL pipeline for a RAG-based Q&A agent that specializes in Kinda Funny content."
authors = [
    {name = "Jeremy Phares", email = "jeremy.phares.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"

[project.scripts]
kfai = "kfai.cli:main"

[tool.poetry]
packages = [
    { include = "kfai", from = "src" }
]

[tool.poetry.dependencies]
google-api-python-client = "^2.179.0"
gradio = "^5.42.0"
isodate = "^0.7.2"
langchain = "^0.3.27"
langchain-core = "^0.3.74"
langchain-huggingface = "^0.3.1"
langchain-ollama = "^0.3.6"
langchain-postgres = "^0.0.15"
mysql-connector-python = "^9.4.0"
openai-whisper = "^20250625"
psycopg-binary = "^3.2.9"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
torch = {version = "^2.8.0", source = "pytorch"}
torchaudio = {version = "^2.8.0", source = "pytorch"}
torchvision = {version = "^0.23.0", source = "pytorch"}
tqdm = "^4.67.1"
youtube-transcript-api = "^1.2.2"
yt-dlp = "^2025.8.11"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
mypy = "^1.17.1"
ruff = "^0.12.9"
deptry = "^0.23.1"
types-tqdm = "^4.67.0.20250809"
google-api-python-client-stubs = "^1.30.0"
pre-commit = "^4.3.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.deptry]
known_first_party = ["kfai"]

[tool.deptry.per_rule_ignores]
DEP002 = ["torch", "torchaudio", "torchvision", "psycopg-binary"]
